# Electronics_store

./: README.md  pyproject.toml
Product/: Product.py  product.py
product/: exeption.py  product.py
tests/: conftest.py  test.csv  test_keyboard.py  test_phone.py  test_product.py
tests/csv_files/: error.csv
